@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2014-03-03 Steve
+	* Code improvements for MCWeighter
+
 2014-03-02 Steve
 	* Added full functionality to MCWeighter class
 		* getMCWeight, getSumw, getCrossSection, getXsecTimesEff, getPileupWeight
